Remove right side whitespace. Fixes #4

--- a/ui/src/app/game/active-players/active-players.component.scss
+++ b/ui/src/app/game/active-players/active-players.component.scss
@@ -1,11 +1,5 @@
 $border-radius: 7px;
 
-.background {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
 img {
   height: 20px;
   width: 20px;
